--- a/front/diary-front/.prettierrc.json
+++ b/front/diary-front/.prettierrc.json
@@ -3,6 +3,10 @@
   "semi": false,
   "tabWidth": 2,
   "singleQuote": true,
-  "printWidth": 100,
-  "trailingComma": "none"
+  "printWidth": 80,
+  "trailingComma": "none",
+  "useTabs": true,
+  "bracketSpacing": true,
+  "bracketSameLine": true,
+  "vueIndentScriptAndStyle": true
 }
