--- a/front/diary-front/package.json
+++ b/front/diary-front/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write --cache src/"
   },
   "dependencies": {
+    "@vitejs/plugin-vue-jsx": "^4.1.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
@@ -23,13 +24,16 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.20",
     "cypress": "^13.12.0",
     "eslint": "^8.57.0",
     "eslint-plugin-cypress": "^3.3.0",
     "eslint-plugin-vue": "^9.23.0",
     "jsdom": "^24.1.0",
+    "postcss": "^8.4.49",
     "prettier": "^3.2.5",
     "start-server-and-test": "^2.0.4",
+    "tailwindcss": "^3.4.16",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1",
     "vitest": "^1.6.0"
