--- a/front/diary-front/package.json
+++ b/front/diary-front/package.json
@@ -36,6 +36,7 @@
     "tailwindcss": "^3.4.16",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1",
+    "vite-svg-loader": "^5.1.0",
     "vitest": "^1.6.0"
   }
 }
