내 일기 퍼블리싱 완료

--- a/front/diary-front/package.json
+++ b/front/diary-front/package.json
@@ -15,7 +15,10 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^4.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "pinia": "^2.1.7",
+    "tailwind-merge": "^2.5.5",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
