--- a/front/diary-front/package.json
+++ b/front/diary-front/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^4.1.1",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "pinia": "^2.1.7",
