--- a/front/diary-front/package.json
+++ b/front/diary-front/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "pinia": "^2.1.7",
     "tailwind-merge": "^2.5.5",
     "vue": "^3.4.29",
