--- a/front/diary-front/package.json
+++ b/front/diary-front/package.json
@@ -1,48 +1,48 @@
 {
-  "name": "diary-front",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test:unit": "vitest",
-    "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
-    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write --cache src/"
-  },
-  "dependencies": {
-    "@vitejs/plugin-vue-jsx": "^4.1.1",
-    "axios": "^1.7.9",
-    "chart.js": "^4.4.7",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "js-cookie": "^3.0.5",
-    "pinia": "^2.1.7",
-    "tailwind-merge": "^2.5.5",
-    "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
-  },
-  "devDependencies": {
-    "@rushstack/eslint-patch": "^1.8.0",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/test-utils": "^2.4.6",
-    "autoprefixer": "^10.4.20",
-    "cypress": "^13.12.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-cypress": "^3.3.0",
-    "eslint-plugin-vue": "^9.23.0",
-    "jsdom": "^24.1.0",
-    "postcss": "^8.4.49",
-    "prettier": "^3.2.5",
-    "start-server-and-test": "^2.0.4",
-    "tailwindcss": "^3.4.16",
-    "vite": "^5.3.1",
-    "vite-plugin-vue-devtools": "^7.3.1",
-    "vite-svg-loader": "^5.1.0",
-    "vitest": "^1.6.0"
-  }
+	"name": "diary-front",
+	"version": "0.0.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"test:unit": "vitest",
+		"test:e2e": "start-server-and-test preview http://ec2-3-34-61-96.ap-northeast-2.compute.amazonaws.com:8000:4173 'cypress run --e2e'",
+		"test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://ec2-3-34-61-96.ap-northeast-2.compute.amazonaws.com:8000:4173 'cypress open --e2e'",
+		"lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+		"format": "prettier --write --cache src/"
+	},
+	"dependencies": {
+		"@vitejs/plugin-vue-jsx": "^4.1.1",
+		"axios": "^1.7.9",
+		"chart.js": "^4.4.7",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"js-cookie": "^3.0.5",
+		"pinia": "^2.1.7",
+		"tailwind-merge": "^2.5.5",
+		"vue": "^3.4.29",
+		"vue-router": "^4.3.3"
+	},
+	"devDependencies": {
+		"@rushstack/eslint-patch": "^1.8.0",
+		"@vitejs/plugin-vue": "^5.0.5",
+		"@vue/eslint-config-prettier": "^9.0.0",
+		"@vue/test-utils": "^2.4.6",
+		"autoprefixer": "^10.4.20",
+		"cypress": "^13.12.0",
+		"eslint": "^8.57.0",
+		"eslint-plugin-cypress": "^3.3.0",
+		"eslint-plugin-vue": "^9.23.0",
+		"jsdom": "^24.1.0",
+		"postcss": "^8.4.49",
+		"prettier": "^3.2.5",
+		"start-server-and-test": "^2.0.4",
+		"tailwindcss": "^3.4.16",
+		"vite": "^5.3.1",
+		"vite-plugin-vue-devtools": "^7.3.1",
+		"vite-svg-loader": "^5.1.0",
+		"vitest": "^1.6.0"
+	}
 }
